# 3dsmc-Group-8

./: .gitignore  CMakeLists.txt  README.md
res/: params-sm-g950f.yaml  params.yaml
src/: Args.cpp  Args.h  Grid.cpp  Grid.h  ImageSource.cpp  ImageSource.h  Marker.cpp  Marker.h  Mesh.cpp  Mesh.h  Segmentation.cpp  Segmentation.h  Trace.h  Viewer.cpp  Viewer.h  main.cpp
